--- a/DutchTreat/Views/App/Contact.cshtml
+++ b/DutchTreat/Views/App/Contact.cshtml
@@ -3,31 +3,39 @@
     ViewBag.Title = "Contact Us";
 }
 @section Scripts {
-    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
-    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
 }
-<form method="post">
-    <div asp-validation-summary="ModelOnly"></div>
-    <label asp-for="Name">Your Name:</label>
-    <br />
-    <input asp-for="Name" />
-    <span asp-validation-for="Name"></span>
-    <br />
-    <label asp-for="Email">Email:</label>
-    <br />
-    <input type="email" asp-for="Email" />
-    <span asp-validation-for="Email"></span>
-    <br />
-    <label asp-for="Subject">Subject:</label>
-    <br />
-    <input type="text" asp-for="Subject" />
-    <span asp-validation-for="Subject"></span>
-    <br />
-    <label asp-for="Message">Message:</label>
-    <br />
-    <textarea rows="4" asp-for="Message"></textarea>
-    <span asp-validation-for="Message"></span>
-    <br />
-    <input type="submit" value="Send Message" />
-    <div>@ViewBag.UserMessage</div>
-</form>
+<div class="col-md-6 offset-md-3">
+    <div class="card card-body bg-light">
+        <form method="post">
+            <div asp-validation-summary="ModelOnly"></div>
+
+            <div class="mb-3">
+                <label class="form-label" asp-for="Name">Your Name:</label>
+                <input class="form-control" type="text" asp-for="Name" placeholder="Name" />
+                <span class="text-danger" asp-validation-for="Name"></span>
+            </div>
+            <div class="mb-3">
+                <label class="form-label" asp-for="Email">Email:</label>
+                <input class="form-control" type="email" asp-for="Email" placeholder="name@example.com"/>
+                <span class="text-danger" asp-validation-for="Email"></span>
+            </div>
+            <div class="mb-3">
+                <label class="form-label" asp-for="Subject">Subject:</label>
+                <input class="form-control" type="text" asp-for="Subject" placeholder="Subject"/>
+                <span class="text-danger" asp-validation-for="Subject"></span>
+            </div>
+            <div class="mb-3">
+                <label class="form-label" asp-for="Message">Message:</label>
+                <textarea class="form-control" rows="4" asp-for="Message" placeholder="Message"></textarea>
+                <span class="text-danger" asp-validation-for="Message"></span>
+            </div>
+
+            <div class="mb-3">
+                <button class="btn btn-primary" type="submit"><i class="fas fa-envelope"></i> Send Message</button>
+                <div class="text-success">@ViewBag.UserMessage</div>
+            </div>
+        </form>
+    </div>
+</div>
