--- a/DutchTreat/Views/App/Index.cshtml
+++ b/DutchTreat/Views/App/Index.cshtml
@@ -2,35 +2,42 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="product-info">
-    <img src="/img/VanGogh.jpg" />
-    <h3>Mug</h3>
-    <ul class="product-props">
-        <li>Price: $9.99</li>
-        <li>Artist: Van Gogh</li>
-        <li>Title: </li>
-        <li>Description: Self-portrait</li>
-    </ul>
-    <button id="buyButton">Buy</button>
-</div>
+<div class="row">
+    <div class="col-md-9">
+        <div class="product-info">
+            <img src="/img/VanGogh.jpg" />
+            <h3>Mug</h3>
+            <ul class="product-props">
+                <li>Price: $9.99</li>
+                <li>Artist: Van Gogh</li>
+                <li>Title: </li>
+                <li>Description: Self-portrait</li>
+            </ul>
+            <button id="buyButton">Buy</button>
+        </div>
 
-<div>
-    <div id="loginToggle">Login</div>
-    <form class="popup-form">
         <div>
-            <label>Username</label>
-            <input />
+            <div id="loginToggle">Login</div>
+            <form class="popup-form">
+                <div>
+                    <label>Username</label>
+                    <input />
+                </div>
+                <div>
+                    <label>Password</label>
+                    <input type="password" />
+                </div>
+                <div>
+                    <input type="checkbox">
+                    <label>Remember Me?</label>
+                </div>
+                <div>
+                    <input type="submit" value="Login" />
+                </div>
+            </form>
         </div>
-        <div>
-            <label>Password</label>
-            <input type="password" />
-        </div>
-        <div>
-            <input type="checkbox">
-            <label>Remember Me?</label>
-        </div>
-        <div>
-            <input type="submit" value="Login" />
-        </div>
-    </form>
+    </div>
+    <div class="col-md-3">
+        <p>This is a fun site to do some buying of dutch products.</p>
+    </div>
 </div>
