--- a/DutchTreat/Views/Shared/_Layout.cshtml
+++ b/DutchTreat/Views/Shared/_Layout.cshtml
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dutch Treat: @ViewBag.Title</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/fortawesome/fontawesome-free/css/all.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 </head>
 <body>
-    <header class="container">
+    <header class="container-fluid p-0">
         <nav class="navbar navbar-dark bg-dark navbar-expand-md">
-            <h1 class="navbar-brand">Welcome to Dutch Treat</h1>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#theMenu">
+            <h1 class="navbar-brand"><i class="fas fa-paint-brush"></i> Dutch Treat</h1>
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#theMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div id="theMenu" class="navbar-collapse collapse">
@@ -30,10 +31,12 @@
         </nav>
     </header>
     <section class="container">
-        <h2>@ViewBag.Title</h2>
+        <h2 class="text-center">@ViewBag.Title</h2>
         @RenderBody()
     </section>
-    <footer class="container">Copyright 2022 Dutch Treat LLC</footer>
+    <footer class="container">
+        <div class="text-center">Copyright 2022 Dutch Treat LLC</div>
+    </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
