Added Checkout page

--- a/DutchTreat/Client/src/app/views/cartView.component.html
+++ b/DutchTreat/Client/src/app/views/cartView.component.html
@@ -23,8 +23,9 @@
   </tbody>
   <tfoot>
     <tr>
-      <td colspan="5"><strong>Subtotal: {{ store.subtotal() | currency }}</strong></td>
+      <td colspan="5"><strong>Subtotal: {{ store.order.subtotal | currency }}</strong></td>
     </tr>
   </tfoot>
 </table>
+<a class="btn btn-success" *ngIf="store.order.items.length > 0" routerLink="checkout">Checkout</a> 
 <hr />
